[tool.poetry]
name = "streamlit-huggingface-pipeline-tests"
version = "0.0.1"
description = "Streamlit conversational voice bot using huggingface pipelines"
authors = ["Evan Madill <emadill@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "^1.3.1"
streamlit-webrtc = "^0.33.0"
pydub = "^0.25.1"
scipy = "^1.7.3"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
