[tool.poetry]
name = "streamlit-recsys-tests"
version = "0.0.1"
description = "Streamlit recommender system on Steam reveiws"
authors = ["Evan Madill <emadill@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
streamlit = "^1.3.1"
pandas = "^1.3.5"
plotly = "^5.5.0"
recommenders = "^0.7.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
