[tool.poetry]
name = "streamlit-stockpred-tests"
version = "0.0.1"
description = "Streamlit stock prediction test"
authors = ["Evan Madill <emadill@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
streamlit = "^1.3.1"
yfinance = "^0.1.67"
pycoingecko = "^2.2.0"
pystan = "2.19.1.1"
prophet = "^1.0.1"
streamlit-aggrid = "^0.2.2"
plotly = "^5.5.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
