[tool.poetry]
name = "streamlit-trees-tests"
version = "0.0.1"
description = "Streamlit tree inventory Winnipeg tests"
authors = ["Evan Madill <emadill@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
streamlit = "^1.3.1"
plotly = "^5.5.0"
pydeck = "^0.7.1"
holoviews = "^1.14.7"
bokeh = "^2.4.2"
scikit-learn = "^1.0.2"
hdbscan = "^0.8.27"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
